--- a/minimo/styles/main.css
+++ b/minimo/styles/main.css
@@ -234,13 +234,13 @@ body {
         grid-column-gap: 50px;
         margin-top: 10px;
         float: none;
-        text-align: center;
+     	text-align: center;
     }
     .bg-image img {
         width: 100%;        
     }
     .main-article {
-        text-align: center;
+       /* text-align: center;*/
         width: 80%;
     }
     .main-article p {
