--- a/minimo/styles/main.css
+++ b/minimo/styles/main.css
@@ -14,12 +14,13 @@ body {
     text-transform: uppercase;
 }
 
-.header-grid-container {
+nav {
     float: right;
     display: grid;
     grid-template-columns: 190px 210px 145px auto;
     grid-template-rows: auto;
     margin-top: -67px;
+	-moz-font-family: 'Playfair Display', serif;
 }
 
 .header-grid-container a {
@@ -227,9 +228,7 @@ body {
     .logo {
         text-align: center;
     }
-	.nav {
-		-moz-font-family: 'Inconsolata', monospace;
-	}
+	
     .header-grid-container {
         grid-template-columns: auto auto;
         grid-template-rows: auto auto;
