--- a/creatives/styles/main.css
+++ b/creatives/styles/main.css
@@ -49,10 +49,10 @@ li {
 }
 
 .bl {
-	font-size: 17.86rem;
+	display: block;
+	font-size: 17rem;
 	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 700;
-	text-transform: uppercase;
 	text-align: center;
 	color: rgba(255, 255, 255, 0.28);
 	position: absolute;
@@ -72,6 +72,8 @@ h3 {
 header {
 	background-image: url(../img/bg-1.jpg);
 	height: 880px;
+	position: relative;
+	z-index: 10;
 }
 
 .nav {
@@ -109,8 +111,12 @@ header {
 }
 
 .site-title {
-	margin-top: 276px;
 	text-align: center;
+	position: absolute;
+	z-index: 20;
+	margin-top: -600px;
+	left: 0;
+	right: 0;
 }
 
 .site-title h1 {
@@ -129,6 +135,28 @@ header {
 	text-transform: uppercase;
 	letter-spacing: 25px;
 	padding-left: 30px;
+}
+
+#scroll {
+	position: absolute;
+	z-index: 30;
+	margin-top: -190px;
+	text-align: center;
+	left: 0;
+	right: 0;
+}
+
+#scroll span {
+	color: white;
+	font-family: 'Open Sans', sans-serif;
+}
+
+#scroll i {
+	font-size: 2rem;
+	color: white;
+	border: 2px solid white;
+	border-radius: 50%;
+	padding: 20px 25px;
 }
 
 .features {
@@ -155,7 +183,7 @@ header {
 
 .blog {
 	position: relative;
-	height: 900px;
+	height: 1100px;
 	background: #fff;
 	text-align: center;
 }
@@ -177,6 +205,11 @@ header {
 
 .blog h3 {
 	color: #11749e;
+}
+
+.blog h4 {
+	margin-bottom: 80px;
+	font-family: 'Gotham Book', sans-serif;
 }
 
 .blog_text {
@@ -286,17 +319,21 @@ footer p {
 	}
 
 	.site-title {
-		margin-top: 500px;
+		margin-top: -300px;
 	}
-
+	
 	.site-title h1 {
-		font-size: 2rem;
+		font-size: 4rem;
 	}
 
 	.site-title p {
 		font-size: 1rem;
 		letter-spacing: 10px;
 		padding-left: 0;
+	}
+	
+	#scroll {
+		margin-top: -150px;
 	}
 
 	.features {
@@ -308,7 +345,7 @@ footer p {
 	}
 
 	.blog {
-		height: 2350px;
+		height: 2500px;
 	}
 
 	.blog img {
