--- a/gzhel/css/scss/main.scss
+++ b/gzhel/css/scss/main.scss
@@ -1,5 +1,3 @@
-@import "bourbon/bourbon";
-
 $main: #3F51B5;
 
 
@@ -68,7 +66,7 @@ p {
 
 .parallax-window {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     min-height: 620px;
 }
 
