--- a/gzhel/css/scss/main.scss
+++ b/gzhel/css/scss/main.scss
@@ -158,10 +158,11 @@ p {
 }
 
 .christmas {
-    background: url('../../img/cups.jpg') no-repeat center top;
+    //background: url('../../img/cups.jpg') no-repeat center top;
     width: 100%;
     max-width: 1600px;
-    min-height: 620px;
+    
+    //min-height: 620px;
 
     .christmas-banner {
         padding-top: 240px;
