--- a/gzhel/css/scss/main.scss
+++ b/gzhel/css/scss/main.scss
@@ -164,7 +164,7 @@ p {
     
     //min-height: 620px;
 
-    .christmas-banner {
+    /*.christmas-banner {
         padding-top: 240px;
         text-align: center;
 
@@ -172,7 +172,7 @@ p {
             line-height: 0;
         }
 
-    }
+    }*/
 
 }
 
