--- a/gzhel/css/scss/main.scss
+++ b/gzhel/css/scss/main.scss
@@ -66,7 +66,7 @@ p {
 
 .parallax-window {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     min-height: 620px;
 }
 
@@ -158,13 +158,13 @@ p {
 }
 
 .christmas {
-    //background: url('../../img/cups.jpg') no-repeat center top;
+    background: url('../../img/christmas-banner.jpg') no-repeat center top;
     width: 100%;
     max-width: 1600px;
-    
-    //min-height: 620px;
+    height: 100vh;
+    min-height: 620px;
 
-    /*.christmas-banner {
+    .christmas-banner {
         padding-top: 240px;
         text-align: center;
 
@@ -172,7 +172,7 @@ p {
             line-height: 0;
         }
 
-    }*/
+    }
 
 }
 
