--- a/gzhel/css/main.css
+++ b/gzhel/css/main.css
@@ -49,7 +49,7 @@ p {
 
 .parallax-window {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   min-height: 620px; }
 
 .banner {
@@ -120,9 +120,10 @@ p {
         border-top: 2px solid lightgrey; }
 
 .christmas {
-  background: url("../../img/cups.jpg") no-repeat center top;
+  background: url("../../img/christmas-banner.jpg") no-repeat center top;
   width: 100%;
   max-width: 1600px;
+  height: 100vh;
   min-height: 620px; }
   .christmas .christmas-banner {
     padding-top: 240px;
