--- a/gzhel/css/main.css
+++ b/gzhel/css/main.css
@@ -120,6 +120,7 @@ p {
         border-top: 2px solid lightgrey; }
 
 .christmas {
+  display: none;
   background: url("../../img/christmas-banner.jpg") no-repeat center top;
   width: 100%;
   max-width: 1600px;
