--- a/gzhel/css/scss/main.scss
+++ b/gzhel/css/scss/main.scss
@@ -158,6 +158,7 @@ p {
 }
 
 .christmas {
+    display: none;
     background: url('../../img/christmas-banner.jpg') no-repeat center top;
     width: 100%;
     max-width: 1600px;
