--- a/gzhel/css/scss/main.scss
+++ b/gzhel/css/scss/main.scss
@@ -158,12 +158,11 @@ p {
 }
 
 .christmas {
-    display: none;
     background: url('../../img/christmas-banner.jpg') no-repeat center top;
     width: 100%;
     max-width: 1600px;
-    height: 100vh;
-    min-height: 620px;
+    height: 620px;
+  //  min-height: 620px;
 
     .christmas-banner {
         padding-top: 240px;
@@ -178,7 +177,6 @@ p {
 }
 
 .banners-bot {
-    display: none;
     .container {        
         .item {
             height: auto;
