--- a/gzhel/css/main.css
+++ b/gzhel/css/main.css
@@ -120,7 +120,7 @@ p {
         border-top: 2px solid lightgrey; }
 
 .christmas {
-  background: url("../../img/christmas-banner.jpg") no-repeat center top;
+  background-color: black;
   width: 100%;
   max-width: 1600px;
   height: 620px; }
