--- a/gzhel/css/scss/main.scss
+++ b/gzhel/css/scss/main.scss
@@ -158,7 +158,8 @@ p {
 }
 
 .christmas {
-    background: url('../../img/christmas-banner.jpg') no-repeat center top;
+    //background: url('../../img/christmas-banner.jpg') no-repeat center top;
+    background-color: black;
     width: 100%;
     max-width: 1600px;
     height: 620px;
