--- a/gzhel/css/scss/media.scss
+++ b/gzhel/css/scss/media.scss
@@ -45,6 +45,7 @@
         .container {
             flex-wrap: wrap;
             justify-content: center;
+            margin: 50px;
             .item {
                 margin-bottom: 50px;
             }
