--- a/gzhel/css/scss/main.scss
+++ b/gzhel/css/scss/main.scss
@@ -101,6 +101,10 @@ p {
                 p {
                     margin-top: 60px;
                 }
+                
+                h3 {
+                    color: $main;
+                }
             }
 
             button {
