--- a/gzhel/css/scss/main.scss
+++ b/gzhel/css/scss/main.scss
@@ -164,7 +164,7 @@ p {
 }
 
 .christmas {
-    background: url('/../../img/christmas-banner.jpg') no-repeat center top;
+    background: url('https://maxpodufalov.github.io/gzhel/img/christmas-banner.jpg') no-repeat center top;
     width: 100%;
     height: 100vh;
     min-height: 620px;
