--- a/gzhel/css/scss/main.scss
+++ b/gzhel/css/scss/main.scss
@@ -65,6 +65,7 @@ p {
 }
 
 .parallax-window {
+    background-image: attr(data-image-src "https://maxpodufalov.github.io/gzhel/img/banner.jpg");
     width: 100%;
     height: 100vh;
     min-height: 620px;
