--- a/gzhel/css/main.css
+++ b/gzhel/css/main.css
@@ -48,7 +48,7 @@ p {
     -ms-filter: "alpha(opacity=80)"; }
 
 .parallax-window {
-  background-image: attr(data-image-src "https://maxpodufalov.github.io/gzhel/img/banner.jpg");
+  background-image: url("https://maxpodufalov.github.io/gzhel/img/banner.jpg");
   width: 100%;
   height: 100vh;
   min-height: 620px; }
