--- a/gzhel/css/main.css
+++ b/gzhel/css/main.css
@@ -48,6 +48,11 @@ p {
     -ms-filter: "alpha(opacity=80)"; }
 
 .parallax-window {
+  background-image: url("https://maxpodufalov.github.io/gzhel/img/banner.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
   height: 100vh;
   min-height: 620px; }
