--- a/gzhel/css/scss/main.scss
+++ b/gzhel/css/scss/main.scss
@@ -43,6 +43,7 @@ p {
     -webkit-border-radius: 60px;
     -moz-border-radius: 60px;
     border-radius: 60px;
+    z-index: 200;
 
     span {
         position: absolute;
