--- a/newagetest/css/media.css
+++ b/newagetest/css/media.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 768px) {
   .header .container .header-links .logo {
     width: 100%; }
     .header .container .header-links .logo p {
@@ -74,7 +74,8 @@
         .form .container .inner-container .inputs .items-large input {
           width: 100%; }
         .form .container .inner-container .inputs .items-regular input {
-          width: 200px; }
+          max-width: 200px;
+          width: 100%; }
       .form .container .inner-container .banner {
         max-width: 100%; }
         .form .container .inner-container .banner .btn-more {
@@ -99,5 +100,19 @@
       .order-cards .container div {
         max-width: 400px;
         width: 100%; } }
+@media only screen and (max-width: 479px) {
+  .header .container .header-links .links-list ul li {
+    margin-bottom: 20px;
+    font-size: 14px; }
+
+  .form .container .inner-container .banner {
+    text-align: center; }
+    .form .container .inner-container .banner .btn-more {
+      margin: auto; }
+
+  .small-cards .container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; } }
 
 /*# sourceMappingURL=media.css.map */
