--- a/newagetest/css/scss/main.scss
+++ b/newagetest/css/scss/main.scss
@@ -30,14 +30,39 @@ $accent-color: #006c86;
     padding: 0;
 }
 
+html {
+    min-height: 100%;
+    position: relative;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
-    //    background-image: linear-gradient(#ededed, #d7d5d7);
-    background: url('../../img/bg.png') no-repeat;
-    background-color: #eee;
+    background-image: url('../../img/bg.png');
+    background-repeat: repeat-x;
+    background-color: #ededed;
     background-size: auto;
     height: auto;
+    z-index: 1;
+}
+
+.bottom-background {
+    background-image: url('../../img/bg.png');
+    background-repeat: repeat-x;
+    background-size: auto;
+    transform: scaleX(-1);
+    -moz-transform: scaleY(-1);
+    -o-transform: scaleY(-1);
+    -webkit-transform: scaleY(-1);
+    transform: scaleY(-1);
+    filter: FlipV;
+    -ms-filter: "FlipV";
+    height: 80%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    z-index: -1;
+
 }
 
 /*================================================================ HEADER START =================*/
@@ -256,7 +281,8 @@ body {
                     justify-content: space-between;
 
                     input {
-                        width: 130px;
+                        max-width: 130px;
+                        width: 100%;
                     }
 
                     .btn-submit {
@@ -385,10 +411,12 @@ body {
 /*================================================================ ORDER-CARDS START =================*/
 
 .order-cards {
+    margin-bottom: 170px;
+
     .container {
         @include container;
         box-sizing: border-box;
-        padding: 20px 20px 30px;
+        padding: 37px 20px 5px;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -400,7 +428,7 @@ body {
             max-width: 280px;
             width: 100%;
             background-color: #ccc;
-            padding: 15px;
+            padding: 8px 15px;
             box-sizing: border-box;
             margin-bottom: 15px;
         }
@@ -409,6 +437,8 @@ body {
         .item-2,
         .item-3 {
             background-color: #fff;
+            border: 2px solid #fff;
+            border-spacing: 10px;
         }
     }
 }
