--- a/newagetest/css/scss/media.scss
+++ b/newagetest/css/scss/media.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 768px) {
     .header {
         .container {
             .header-links {
@@ -105,7 +105,8 @@
 
                     .items-regular {
                         input {
-                            width: 200px;
+                            max-width: 200px;
+                            width: 100%;
                         }
                     }
                 }
@@ -154,6 +155,43 @@
                 max-width: 400px;
                 width: 100%;
             }
+        }
+    }
+}
+
+@media only screen and (max-width: 479px) {
+    .header {
+        .container {
+            .header-links {
+                .links-list {
+                    ul {
+                        li {
+                            margin-bottom: 20px;
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .form {
+        .container {
+            .inner-container {
+                .banner {
+                    text-align: center;
+
+                    .btn-more {
+                        margin: auto;
+                    }
+                }
+            }
+        }
+    }
+
+    .small-cards {
+        .container {
+            justify-content: center;
         }
     }
 }
